cloudformation/T3-Wagu-Security-Group.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: WAGUWAGU Security Groups (ALB, EKS, Valkey)

Parameters:
  ProjectPrefix:
    Type: String
    Default: T3-Wagu

Resources:
  ############################################################
  # 1) Matching ALB SG
  ############################################################
  MatchingAlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Matching ALB SG
      VpcId: !ImportValue T3-Wagu-Matching-VPC-Id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Matching-ALB-SG"
        - Key: Project
          Value: WAGUWAGU

  ############################################################
  # 2) Game ALB SG
  ############################################################
  GameAlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Game ALB SG
      VpcId: !ImportValue T3-Wagu-Game-VPC-Id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Game-ALB-SG"
        - Key: Project
          Value: WAGUWAGU

  ############################################################
  # 3) Matching EKS Node SG
  ############################################################
  MatchingEksNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Matching EKS Node SG
      VpcId: !ImportValue T3-Wagu-Matching-VPC-Id
      SecurityGroupIngress:
        # ALB -> Matching Server
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref MatchingAlbSG
      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Matching-EKS-Node-SG"
        - Key: Project
          Value: WAGUWAGU
        - Key: karpenter.sh/discovery
          Value: !Sub "${ProjectPrefix}-Matching-EKS"

  MatchingEksNodeSGSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref MatchingEksNodeSG
      IpProtocol: -1
      SourceSecurityGroupId: !Ref MatchingEksNodeSG

  ############################################################
  # 4) Game EKS Node SG
  ############################################################
  GameEksNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Game EKS Node SG
      VpcId: !ImportValue T3-Wagu-Game-VPC-Id
      SecurityGroupIngress:
        # ALB -> Game Server
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          SourceSecurityGroupId: !Ref GameAlbSG

        # Matching -> Agones allocator (VPC Peering)
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/16 # Matching VPC CIDR

        # User -> GameServer (Agones Dynamic Ports)
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          CidrIp: 0.0.0.0/0

        # Prometheus -> Game EKS Node
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 10.0.0.0/16

        # Matching -> Game (VPC Peering)
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          CidrIp: 10.0.0.0/16 # Matching VPC CIDR
      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Game-EKS-Node-SG"
        - Key: Project
          Value: WAGUWAGU
        - Key: karpenter.sh/discovery
          Value: !Sub "${ProjectPrefix}-Game-EKS"

  GameEksNodeSGSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref GameEksNodeSG
      IpProtocol: -1
      SourceSecurityGroupId: !Ref GameEksNodeSG
      Description: Allow all inter-node (node-to-node) traffic within Game node SG

  ############################################################
  # 5) Valkey (Redis) SG
  ############################################################
  ValkeySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Valkey SG
      VpcId: !ImportValue T3-Wagu-Matching-VPC-Id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref MatchingEksNodeSG
      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Valkey-SG"
        - Key: Project
          Value: WAGUWAGU

  ############################################################
  # 6) Jenkins Matching SG
  ############################################################
  JenkinsMatchingSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Jenkins Matching Server (SSM + GitHub Webhook)
      VpcId: !ImportValue T3-Wagu-Matching-VPC-Id

      SecurityGroupIngress:
        # GitHub Webhook ?ï¿½ï¿½ Jenkins (HTTP 8080)
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 140.82.112.0/20

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 192.30.252.0/22

      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Jenkins-Matching-SG"
        - Key: Project
          Value: WAGUWAGU

  ############################################################
  # 7) Jenkins Game SG
  ############################################################
  JenkinsGameSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Jenkins Game Server (SSM-only)
      VpcId: !ImportValue T3-Wagu-Game-VPC-Id
      SecurityGroupIngress:
        # GitHub Webhook ?ï¿½ï¿½ Jenkins (HTTP 8080)
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 140.82.112.0/20

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 192.30.252.0/22

      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub "${ProjectPrefix}-Jenkins-Game-SG"
        - Key: Project
          Value: WAGUWAGU

Outputs:
  MatchingAlbSGId:
    Value: !Ref MatchingAlbSG
    Export:
      Name: !Sub "${ProjectPrefix}-MatchingAlbSGId"

  GameAlbSGId:
    Value: !Ref GameAlbSG
    Export:
      Name: !Sub "${ProjectPrefix}-GameAlbSGId"

  MatchingEksNodeSGId:
    Value: !Ref MatchingEksNodeSG
    Export:
      Name: !Sub "${ProjectPrefix}-MatchingEksNodeSGId"

  GameEksNodeSGId:
    Value: !Ref GameEksNodeSG
    Export:
      Name: !Sub "${ProjectPrefix}-GameEksNodeSGId"

  ValkeySGId:
    Value: !Ref ValkeySG
    Export:
      Name: !Sub "${ProjectPrefix}-ValkeySGId"

  JenkinsMatchingSGId:
    Value: !Ref JenkinsMatchingSG
    Export:
      Name: !Sub "${ProjectPrefix}-JenkinsMatchingSGId"

  JenkinsGameSGId:
    Value: !Ref JenkinsGameSG
    Export:
      Name: !Sub "${ProjectPrefix}-JenkinsGameSGId"
